# convergence-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  release-checklist.md  release-notes-v0.1.0.md
examples/: meeting_orchestrator.py  spec_refinement.py
reference/python/: convergence_engine_v1_lite_reference.py
schemas/v1-lite/: constraint.schema.json  engine_run.schema.json  evaluation.schema.json  proposal.schema.json  state.schema.json  trail_entry.schema.json
specs/: convergence-engine-schema-v1-lite.md  convergence-engine-spec.md
src/convergence_engine/: __init__.py  engine.py  serialization.py  storage.py  types.py  utils.py  validation.py
src/convergence_engine/schemas/v1-lite/: constraint.schema.json  engine_run.schema.json  evaluation.schema.json  proposal.schema.json  state.schema.json  trail_entry.schema.json
tests/: __init__.py  coverage_matrix.md  helpers.py  test_engine_constraints.py  test_engine_counters_and_modes.py  test_engine_initialization.py  test_engine_records_and_determinism.py  test_engine_step_semantics.py  test_public_api_and_serialization.py  test_utils_and_schema.py
