[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "convergence-engine"
version = "0.1.0"
description = "Deterministic convergence engine for structured state search."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Convergence Engine Contributors" }
]
keywords = ["agents", "deterministic", "search", "state-machine", "convergence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
convergence_engine = ["schemas/v1-lite/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
