[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "convergence-engine"
version = "0.1.0"
description = "Deterministic convergence engine for structured state search."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Convergence Engine Contributors" }
]
maintainers = [
  { name = "Jamie Anson" }
]
keywords = ["agents", "deterministic", "search", "state-machine", "convergence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/jamie-anson/convergence-engine"
Repository = "https://github.com/jamie-anson/convergence-engine.git"
Issues = "https://github.com/jamie-anson/convergence-engine/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
convergence_engine = ["schemas/v1-lite/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
